--- a/index.html
+++ b/index.html
@@ -3,126 +3,66 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TENNESSEE — Gameday Hub (Unofficial)</title>
-
-  <!-- theme -->
-  <link rel="stylesheet" href="assets/css/styles.css?v=ab2-1" />
-
-  <!-- AB-2 layout helpers (tiny, scoped) -->
-  <style>
-    :root { --gap: 16px; }
-
-    /* Compact hero strip (image-free) */
-    .compact-hero {
-      background:
-        radial-gradient(120% 70% at 50% 0%, rgba(255,130,0,.12), transparent 60%),
-        linear-gradient(180deg, #0d1015 0%, #0b0e12 60%, #0a0c10 100%);
-      border: 1px solid var(--line-700);
-      border-radius: 14px;
-      padding: clamp(16px, 3.5vw, 28px);
-      margin: 16px 0 12px;
-      box-shadow: 0 8px 18px rgba(0,0,0,.35);
-    }
-    .compact-hero .brandline {
-      display: flex; align-items: baseline; gap: 10px; flex-wrap: wrap;
-    }
-    .compact-hero h1 {
-      margin: 0;
-      font: 800 clamp(20px, 6vw, 36px)/1.05 system-ui, sans-serif;
-      letter-spacing: .5px;
-      color: var(--ut-orange);
-      text-shadow: 0 2px 0 rgba(0,0,0,.35), 0 10px 22px rgba(0,0,0,.45);
-      -webkit-text-stroke: 1px rgba(0,0,0,.35);
-    }
-    .compact-hero p { margin: 2px 0 0; color: var(--fg-500); }
-    .compact-hero .actions { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 10px; }
-
-    /* 12-col grid utilities */
-    .g12 { display: grid; grid-template-columns: repeat(12, minmax(0, 1fr)); gap: var(--gap); }
-    .span-12{ grid-column: span 12 }
-    .span-9 { grid-column: span 9 }
-    .span-6 { grid-column: span 6 }
-    .span-4 { grid-column: span 4 }
-    .span-3 { grid-column: span 3 }
-    @media (max-width: 980px){ .span-9{grid-column:span 12} }
-    @media (max-width: 760px){ .span-6,.span-4,.span-3{grid-column:span 12} }
-
-    /* Sticky right rail */
-    .rail { position: sticky; top: 12px; }
-
-    /* Mini stat cards */
-    .ministat .card-bd { display: grid; gap: 6px; }
-    .score-mini { font: 900 clamp(18px, 4.5vw, 28px)/1 system-ui, sans-serif; letter-spacing:.5px; }
-
-    /* Table feature emphasis */
-    .feature { box-shadow: 0 10px 25px rgba(0,0,0,.45), 0 2px 6px rgba(0,0,0,.3); }
-
-    /* Simple placeholder lists */
-    .bullets { margin: 0; padding-left: 16px; color: var(--fg-300); }
-    .bullets li { margin: .25em 0; }
-  </style>
+  <title>TENNESSEE • Gameday Hub</title>
+  <meta name="description" content="Unofficial Tennessee gameday hub: schedule, TV, map, specials, odds." />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
   <a class="skip" href="#main">Skip to content</a>
 
-  <!-- Top bar -->
+  <!-- Topbar -->
   <header class="topbar">
-    <div class="brand">TN</div>
     <nav class="nav">
+      <a href="#" class="brand-mini">TN</a>
       <a href="schedule.html">Schedule</a>
       <a href="specials.html">Specials</a>
       <a href="map.html">Map</a>
       <a href="guide.html">Guide</a>
       <a class="btn btn-small" href="submit.html">Submit</a>
     </nav>
+    <p class="site-note">Fan-run. Unofficial. Built by fans for fans.</p>
   </header>
 
-  <main id="main" class="wrap">
+  <!-- Compact hero strip -->
+  <section class="hero hero--compact">
+    <div class="hero-wordmark">
+      <h1 class="brand-wordmark">TENNESSEE</h1>
+      <p class="subhead">Kickoff Sat, Aug 30, 12:00 PM — Tennessee vs Syracuse</p>
+    </div>
+  </section>
 
-    <!-- =============== COMPACT HERO STRIP (B style) =============== -->
-    <section class="compact-hero">
-      <div class="brandline">
-        <h1>TENNESSEE • Gameday Hub</h1>
-        <p class="muted">Fan-run. Unofficial. Built by fans for fans.</p>
-      </div>
-      <div class="actions">
-        <a class="btn" href="schedule.html">View Schedule</a>
-        <a class="btn btn-small" href="specials.html" style="--bg:transparent;color:var(--fg-100);border:1px solid var(--line-700)">Find Specials</a>
-        <a class="btn btn-small" href="submit.html" style="--bg:transparent;color:var(--fg-100);border:1px solid var(--line-700)">Submit a Listing</a>
-      </div>
-    </section>
+  <!-- Main grid: magazine column + sticky rail -->
+  <main id="main" class="page grid-ab2">
 
-    <!-- =============== 3-UP STATS STRIP (B style) =============== -->
-    <section class="g12">
-
-      <!-- Live Score (mini) — uses #livebox so app.js can populate -->
-      <article class="span-4 card ministat" id="livebox" aria-label="Live Score Box">
-        <header class="card-hd">
-          <h2 class="card-ttl">Live Score</h2>
-          <div class="card-meta"><span data-line="status">—</span></div>
+    <!-- Lead row: 3-up cards -->
+    <section class="three-up">
+      <article class="card" id="scorebox">
+        <header class="card-h">
+          <h2>Live Score Box</h2>
+          <div class="dot dot--idle" aria-label="no game in progress"></div>
         </header>
-        <div class="card-bd">
-          <strong data-line="match">Tennessee</strong>
-          <div class="score-mini" data-line="score">—</div>
-          <p class="muted">Auto-updates when a game is live.</p>
+        <div class="card-b">
+          <p class="muted">Tennessee</p>
+          <p class="muted">No game in progress.</p>
         </div>
       </article>
 
-      <!-- Upcoming (mini) — uses #quick + addToCalendar button -->
-      <article class="span-4 card ministat" id="quickcard" aria-label="Upcoming Game">
-        <header class="card-hd"><h2 class="card-ttl">Upcoming</h2></header>
-        <div class="card-bd" id="quick">
-          <div class="h5" data-line="headline">Loading…</div>
-          <div class="muted" data-line="sub"></div>
-          <button class="btn btn-small" id="addToCalendar" disabled>Add to Calendar</button>
+      <article class="card" id="nextgame">
+        <header class="card-h">
+          <h2>Upcoming Game</h2>
+        </header>
+        <div class="card-b">
+          <p id="nextLine">Loading…</p>
+          <button class="btn btn-small">Add to Calendar</button>
         </div>
       </article>
 
-      <!-- Weather (mini) — static shell for now -->
-      <article class="span-4 card ministat" aria-label="Weather">
-        <header class="card-hd"><h2 class="card-ttl">Weather (3-day)</h2></header>
-        <div class="card-bd">
-          <ul class="weather3">
+      <article class="card" id="weather">
+        <header class="card-h">
+          <h2>Weather (3-day)</h2>
+        </header>
+        <div class="card-b">
+          <ul class="list-compact">
             <li>Fri — — —</li>
             <li>Sat — — —</li>
             <li>Sun — — —</li>
@@ -132,135 +72,122 @@
       </article>
     </section>
 
-    <!-- =============== MAGAZINE GRID + RIGHT RAIL =============== -->
-    <section class="g12" style="margin-top: 16px">
+    <!-- Magazine column (left) -->
+    <section class="mag-col">
 
-      <!-- LEFT: magazine content (span-9) -->
-      <div class="span-9">
-
-        <!-- Feature: Schedule (Primary) — uses #sched + [data-last-updated] -->
-        <section class="card feature" aria-label="Schedule & Results">
-          <header class="card-hd">
-            <h2 class="card-ttl">Schedule & Results</h2>
-            <small class="muted">Data updated — <span data-last-updated>Loading…</span>.</small>
-          </header>
-          <div class="card-bd">
-            <div class="table-wrap">
-              <table class="table" aria-describedby="snote">
-                <thead>
-                  <tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr>
-                </thead>
-                <tbody id="sched"><tr><td colspan="5">Loading…</td></tr></tbody>
-              </table>
-            </div>
-            <p id="snote" class="muted">Times/TV subject to change. Check official sources day-of.</p>
+      <!-- Schedule (paged) -->
+      <article class="card">
+        <header class="card-h">
+          <h2>Schedule & Results</h2>
+          <span class="muted">Data updated — <span data-last-updated>—</span></span>
+        </header>
+        <div class="card-b">
+          <div class="table-wrap">
+            <table class="table" aria-describedby="schNote">
+              <thead>
+                <tr>
+                  <th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th>
+                </tr>
+              </thead>
+              <tbody id="sched"></tbody>
+            </table>
           </div>
-        </section>
 
-        <!-- Two-up: Specials + Guide Highlights -->
-        <div class="g12">
-          <section class="span-6 card" aria-label="Featured Specials">
-            <header class="card-hd"><h2 class="card-ttl">Featured Specials</h2></header>
-            <div class="card-bd">
-              <p class="muted">Community-submitted; call ahead to confirm.</p>
-              <div id="specialsGrid"><!-- optional: fill later --></div>
-            </div>
-          </section>
-
-          <section class="span-6 card" aria-label="Gameday Guide Highlights">
-            <header class="card-hd"><h2 class="card-ttl">Gameday Guide — Highlights</h2></header>
-            <div class="card-bd">
-              <ul class="bullets">
-                <li>Arrive early; expect closures near campus.</li>
-                <li>Clear-bag policies common; verify venue rules.</li>
-                <li>Hydrate; many vendors are cashless.</li>
-                <li>Accessibility: shuttles, elevators, ADA seating.</li>
-              </ul>
-            </div>
-          </section>
+          <div class="table-meta">
+            <span id="schNote" class="muted">Times/TV subject to change. Check official sources day-of.</span>
+            <button id="btnMoreSched" class="btn btn-small" type="button">Show 3 more</button>
+          </div>
         </div>
+      </article>
 
-        <!-- Four-up: Editorial tiles (placeholders you can replace) -->
-        <div class="g12">
-          <section class="span-3 card" aria-label="Dining Picks">
-            <header class="card-hd"><h2 class="card-ttl">Dining Picks</h2></header>
-            <div class="card-bd"><ul class="bullets"><li>Lorem ipsum dolor</li><li>Sit amet</li><li>Consectetur</li></ul></div>
-          </section>
-          <section class="span-3 card" aria-label="Pre-game">
-            <header class="card-hd"><h2 class="card-ttl">Pre-game</h2></header>
-            <div class="card-bd"><ul class="bullets"><li>Tailgate zones</li><li>Meetups</li><li>Parking tips</li></ul></div>
-          </section>
-          <section class="span-3 card" aria-label="Post-game">
-            <header class="card-hd"><h2 class="card-ttl">Post-game</h2></header>
-            <div class="card-bd"><ul class="bullets"><li>Open late</li><li>Live music</li><li>Safe rides</li></ul></div>
-          </section>
-          <section class="span-3 card" aria-label="Deals">
-            <header class="card-hd"><h2 class="card-ttl">Deals</h2></header>
-            <div class="card-bd"><ul class="bullets"><li>Weekend promos</li><li>Student IDs</li><li>Family specials</li></ul></div>
-          </section>
+      <!-- Specials -->
+      <article class="card">
+        <header class="card-h"><h2>Featured Specials</h2></header>
+        <div class="card-b">
+          <p class="muted">Listings are community-submitted. Call ahead to confirm.</p>
         </div>
+      </article>
 
-        <!-- Longform / This Week -->
-        <section class="card" aria-label="This Week in Knoxville">
-          <header class="card-hd"><h2 class="card-ttl">This Week in Knoxville</h2></header>
-          <div class="card-bd">
-            <p class="muted">Short editorial intro (2–3 sentences). Replace this with real copy or a feed.</p>
+      <!-- Gameday guide -->
+      <article class="card">
+        <header class="card-h"><h2>Gameday Guide (Unofficial)</h2></header>
+        <div class="card-b grid-2">
+          <section>
+            <h3 class="h6">Getting There</h3>
             <ul class="bullets">
-              <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-              <li>Integer posuere erat a ante venenatis dapibus posuere velit.</li>
-              <li>Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</li>
+              <li>Rideshare or public lots; expect road closures near campus.</li>
+              <li>Plan 60–90 minutes for traffic and entry queues.</li>
+              <li>Pick a meetup spot in case phones die.</li>
             </ul>
-          </div>
-        </section>
-      </div>
-
-      <!-- RIGHT: sticky rail (A style) -->
-      <aside class="span-3">
-        <div class="card rail" aria-label="Right Rail">
-          <header class="card-hd"><h2 class="card-ttl">Map (mini)</h2></header>
-          <div class="card-bd">
-            <p class="muted">Interactive map coming soon (pins + “Open now”).</p>
-            <div style="height:160px; border:1px dashed var(--line-700); border-radius:10px;"></div>
-          </div>
-
-          <div class="card-bd" style="border-top:1px solid var(--line-700)">
-            <h3 class="card-ttl" style="font-size:1rem">Submit a Listing</h3>
-            <p class="muted">Restaurant, bar, shop, or event with a gameday special?</p>
-            <a class="btn btn-small" href="submit.html">Open form</a>
-          </div>
-
-          <div class="card-bd" style="border-top:1px solid var(--line-700)">
-            <h3 class="card-ttl" style="font-size:1rem">Newsletter</h3>
-            <form class="nl" onsubmit="event.preventDefault(); alert('Thanks!');">
-              <input type="email" placeholder="you@example.com" required />
-              <button class="btn btn-small" type="submit">Subscribe</button>
-            </form>
-            <p class="muted" style="margin-top:6px">We don’t sell your data. Unsubscribe anytime.</p>
-          </div>
-
-          <div class="card-bd" style="border-top:1px solid var(--line-700)">
-            <h3 class="card-ttl" style="font-size:1rem">Quick Links</h3>
+          </section>
+          <section>
+            <h3 class="h6">Entry & Bags</h3>
             <ul class="bullets">
-              <li><a href="guide.html">Guide</a></li>
-              <li><a href="specials.html">Specials</a></li>
-              <li><a href="schedule.html">Full Schedule</a></li>
+              <li>Many venues have clear-bag rules and metal detectors.</li>
+              <li>Leave large items, outside alcohol, and problem wearables at home.</li>
+              <li>Always verify with the official event page before you go.</li>
             </ul>
-          </div>
+          </section>
         </div>
-      </aside>
+      </article>
+
     </section>
 
+    <!-- Right rail (sticky) -->
+    <aside class="rail">
+      <article class="card">
+        <header class="card-h"><h2>This Week in Knoxville</h2></header>
+        <div class="card-b">
+          <ul class="list-compact">
+            <li><a href="#" class="text">Market Square Live Music</a></li>
+            <li><a href="#" class="text">Old City Night Market</a></li>
+            <li><a href="#" class="text">Downtown Brunch Crawl</a></li>
+          </ul>
+        </div>
+      </article>
+
+      <article class="card">
+        <header class="card-h"><h2>Map</h2></header>
+        <div class="card-b">
+          <p class="muted">We’ll add an interactive map with categories and “Open now”.</p>
+        </div>
+      </article>
+
+      <article class="card">
+        <header class="card-h"><h2>TV & Streams (This Week)</h2></header>
+        <div class="card-b">
+          <p class="muted">Updates closer to kickoff.</p>
+        </div>
+      </article>
+
+      <article class="card">
+        <header class="card-h"><h2>Odds</h2></header>
+        <div class="card-b">
+          <p class="muted">For entertainment only. Check a licensed sportsbook for current numbers.</p>
+        </div>
+      </article>
+
+      <article class="card">
+        <header class="card-h"><h2>Rankings (AP Top 25)</h2></header>
+        <div class="card-b"><p class="muted">—</p></div>
+      </article>
+    </aside>
   </main>
 
   <footer class="sitefoot">
-    <p><strong>Unofficial notice:</strong> Independent, fan-operated site. Not affiliated with any university, athletics program, conference, or governing body.</p>
-    <p class="muted">© 2025 HC Web Labs. Content licensed under
-      <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY-NC-ND 4.0</a>.
+    <p class="muted">
+      <strong>Unofficial notice:</strong>
+      Independent, fan-operated site. Not affiliated with any university, athletics program, conference, or governing body.
     </p>
+    <nav class="footnav">
+      <a href="guide.html">Guide</a> • <a href="specials.html">Specials</a> •
+      <a href="map.html">Map</a> • <a href="schedule.html">Schedule</a> •
+      <a href="submit.html">Submit</a>
+    </nav>
+    <p class="muted">© 2025 HC Web Labs. Content licensed under CC BY-NC-ND 4.0.</p>
   </footer>
 
-  <!-- scripts: app.js renders Live Score, Upcoming, Schedule -->
-  <script type="module" src="assets/js/app.js?v=ab2-1"></script>
-  <script type="module" src="assets/js/live.js?v=ab2-1"></script>
+  <script src="assets/js/app.js" defer></script>
+  <script src="assets/js/live.js" defer></script>
 </body>
 </html>
