--- a/index.html
+++ b/index.html
@@ -2,192 +2,229 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TENNESSEE • Gameday Hub</title>
-  <meta name="description" content="Unofficial Tennessee gameday hub: schedule, TV, map, specials, odds." />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>TENNESSEE — Gameday Hub</title>
+
+  <!-- App meta -->
+  <meta name="description" content="Unofficial Tennessee Gameday Hub: schedule, TV/streams, odds, specials & map." />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
+
   <a class="skip" href="#main">Skip to content</a>
 
-  <!-- Topbar -->
-  <header class="topbar">
-    <nav class="nav">
-      <a href="#" class="brand-mini">TN</a>
-      <a href="schedule.html">Schedule</a>
-      <a href="specials.html">Specials</a>
-      <a href="map.html">Map</a>
-      <a href="guide.html">Guide</a>
-      <a class="btn btn-small" href="submit.html">Submit</a>
-    </nav>
-    <p class="site-note">Fan-run. Unofficial. Built by fans for fans.</p>
+  <!-- Compact hero strip -->
+  <header class="hero">
+    <div class="hero-inner">
+      <div class="brand">
+        <span class="brand-badge">TN</span>
+        <strong>TENNESSEE</strong>
+      </div>
+
+      <nav class="nav">
+        <a href="schedule.html">Schedule</a>
+        <a href="specials.html">Specials</a>
+        <a href="map.html">Map</a>
+        <a href="guide.html">Guide</a>
+        <a class="btn btn-small" href="submit.html">Submit</a>
+      </nav>
+    </div>
+
+    <section class="ticker" aria-label="Gameday ticker">
+      <div class="ticker-inner">Loading…</div>
+    </section>
   </header>
 
-  <!-- Compact hero strip -->
-  <section class="hero hero--compact">
-    <div class="hero-wordmark">
-      <h1 class="brand-wordmark">TENNESSEE</h1>
-      <p class="subhead">Kickoff Sat, Aug 30, 12:00 PM — Tennessee vs Syracuse</p>
-    </div>
-  </section>
+  <!-- Page grid -->
+  <main id="main" class="page">
 
-  <!-- Main grid: magazine column + sticky rail -->
-  <main id="main" class="page grid-ab2">
+    <!-- Content column -->
+    <section class="content">
 
-    <!-- Lead row: 3-up cards -->
-    <section class="three-up">
-      <article class="card" id="scorebox">
-        <header class="card-h">
-          <h2>Live Score Box</h2>
-          <div class="dot dot--idle" aria-label="no game in progress"></div>
-        </header>
-        <div class="card-b">
-          <p class="muted">Tennessee</p>
-          <p class="muted">No game in progress.</p>
-        </div>
-      </article>
-
-      <article class="card" id="nextgame">
-        <header class="card-h">
-          <h2>Upcoming Game</h2>
-        </header>
-        <div class="card-b">
-          <p id="nextLine">Loading…</p>
-          <button class="btn btn-small">Add to Calendar</button>
-        </div>
-      </article>
-
-      <article class="card" id="weather">
-        <header class="card-h">
-          <h2>Weather (3-day)</h2>
-        </header>
-        <div class="card-b">
-          <ul class="list-compact">
-            <li>Fri — — —</li>
-            <li>Sat — — —</li>
-            <li>Sun — — —</li>
-          </ul>
-          <p class="muted">Forecasts change—check again closer to kickoff.</p>
-        </div>
-      </article>
-    </section>
-
-    <!-- Magazine column (left) -->
-    <section class="mag-col">
-
-      <!-- Schedule (paged) -->
-      <article class="card">
-        <header class="card-h">
-          <h2>Schedule & Results</h2>
-          <span class="muted">Data updated — <span data-last-updated>—</span></span>
-        </header>
-        <div class="card-b">
-          <div class="table-wrap">
-            <table class="table" aria-describedby="schNote">
-              <thead>
-                <tr>
-                  <th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th>
-                </tr>
-              </thead>
-              <tbody id="sched"></tbody>
-            </table>
+      <!-- 3-up stats row -->
+      <div class="stats3">
+        <article class="card">
+          <header class="card-h">
+            <h2 class="h">Live Score Box</h2>
+            <div class="dots" aria-hidden="true"><span></span><span></span><span></span></div>
+          </header>
+          <div class="card-b" id="scorebox">
+            <div class="score-row">
+              <div class="team home">
+                <div class="team-name" id="live-home-name">Tennessee</div>
+                <div class="team-score" id="live-home-score">—</div>
+              </div>
+              <div class="game-state">
+                <div id="live-gameclock">No game in progress.</div>
+              </div>
+              <div class="team away">
+                <div class="team-name" id="live-away-name">—</div>
+                <div class="team-score" id="live-away-score">—</div>
+              </div>
+            </div>
           </div>
+        </article>
 
-          <div class="table-meta">
-            <span id="schNote" class="muted">Times/TV subject to change. Check official sources day-of.</span>
-            <button id="btnMoreSched" class="btn btn-small" type="button">Show 3 more</button>
+        <article class="card">
+          <header class="card-h">
+            <h2 class="h">Upcoming Game</h2>
+            <div class="dots" aria-hidden="true"><span></span><span></span><span></span></div>
+          </header>
+          <div class="card-b" id="upcoming">
+            <p id="next-line">Loading…</p>
+            <div class="actions">
+              <button class="btn btn-small" id="btnAddToCal" disabled>Add to Calendar</button>
+            </div>
           </div>
-        </div>
-      </article>
+        </article>
 
-      <!-- Specials -->
-      <article class="card">
-        <header class="card-h"><h2>Featured Specials</h2></header>
-        <div class="card-b">
-          <p class="muted">Listings are community-submitted. Call ahead to confirm.</p>
-        </div>
-      </article>
-
-      <!-- Gameday guide -->
-      <article class="card">
-        <header class="card-h"><h2>Gameday Guide (Unofficial)</h2></header>
-        <div class="card-b grid-2">
-          <section>
-            <h3 class="h6">Getting There</h3>
-            <ul class="bullets">
-              <li>Rideshare or public lots; expect road closures near campus.</li>
-              <li>Plan 60–90 minutes for traffic and entry queues.</li>
-              <li>Pick a meetup spot in case phones die.</li>
+        <article class="card">
+          <header class="card-h">
+            <h2 class="h">Weather (3-day)</h2>
+            <div class="dots" aria-hidden="true"><span></span><span></span><span></span></div>
+          </header>
+          <div class="card-b" id="weather3">
+            <ul class="wx3">
+              <li><span>Fri</span><em>— — —</em></li>
+              <li><span>Sat</span><em>— — —</em></li>
+              <li><span>Sun</span><em>— — —</em></li>
             </ul>
-          </section>
-          <section>
-            <h3 class="h6">Entry & Bags</h3>
-            <ul class="bullets">
-              <li>Many venues have clear-bag rules and metal detectors.</li>
-              <li>Leave large items, outside alcohol, and problem wearables at home.</li>
-              <li>Always verify with the official event page before you go.</li>
-            </ul>
-          </section>
-        </div>
-      </article>
+            <p class="muted">Forecasts change—check again closer to kickoff.</p>
+          </div>
+        </article>
+      </div>
 
+      <!-- Magazine grid -->
+      <div class="mag-grid">
+
+        <!-- Schedule -->
+        <article class="card card-span2" id="schedCard">
+          <header class="card-h">
+            <h2 class="h">Schedule & Results</h2>
+            <div class="meta">Data updated — <span data-last-updated>Loading…</span></div>
+          </header>
+          <div class="card-b">
+            <div class="table-wrap">
+              <table class="table">
+                <thead>
+                  <tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr>
+                </thead>
+                <tbody id="sched"></tbody>
+              </table>
+              <!-- gradient fade when truncated -->
+              <div class="fade-mask" aria-hidden="true"></div>
+            </div>
+            <div class="table-actions">
+              <button class="btn btn-ghost" data-toggle="sched">Show full schedule</button>
+            </div>
+            <p class="muted">Times/TV subject to change. Check official sources day-of.</p>
+          </div>
+        </article>
+
+        <!-- Specials -->
+        <article class="card">
+          <header class="card-h"><h2 class="h">Featured Specials</h2></header>
+          <div class="card-b">
+            <div id="specialsGrid" class="list list-tight"></div>
+            <p class="muted">Listings are community-submitted. Call ahead to confirm.</p>
+          </div>
+        </article>
+
+        <!-- Map -->
+        <article class="card">
+          <header class="card-h"><h2 class="h">Map</h2></header>
+          <div class="card-b">
+            <p>We’ll add an interactive map with categories and “Open now”.</p>
+          </div>
+        </article>
+
+        <!-- TV / Streams -->
+        <article class="card">
+          <header class="card-h"><h2 class="h">TV & Streams (This Week)</h2></header>
+          <div class="card-b"><p>Updates closer to kickoff.</p></div>
+        </article>
+
+        <!-- Odds -->
+        <article class="card">
+          <header class="card-h"><h2 class="h">Odds</h2></header>
+          <div class="card-b">
+            <p class="muted">For entertainment only. Check a licensed sportsbook for current numbers.</p>
+          </div>
+        </article>
+
+        <!-- Rankings -->
+        <article class="card">
+          <header class="card-h"><h2 class="h">Rankings (AP Top 25)</h2></header>
+          <div class="card-b" id="rankings">Loading…</div>
+        </article>
+
+      </div>
     </section>
 
     <!-- Right rail (sticky) -->
-    <aside class="rail">
+    <aside class="rail" aria-label="Right rail">
+
       <article class="card">
-        <header class="card-h"><h2>This Week in Knoxville</h2></header>
+        <header class="card-h"><h2 class="h">Countdown</h2></header>
         <div class="card-b">
-          <ul class="list-compact">
-            <li><a href="#" class="text">Market Square Live Music</a></li>
-            <li><a href="#" class="text">Old City Night Market</a></li>
-            <li><a href="#" class="text">Downtown Brunch Crawl</a></li>
+          <ul class="timer">
+            <li><strong id="tDays">00</strong><span>days</span></li>
+            <li><strong id="tHours">00</strong><span>hrs</span></li>
+            <li><strong id="tMins">00</strong><span>mins</span></li>
+            <li><strong id="tSecs">00</strong><span>secs</span></li>
           </ul>
         </div>
       </article>
 
       <article class="card">
-        <header class="card-h"><h2>Map</h2></header>
-        <div class="card-b">
-          <p class="muted">We’ll add an interactive map with categories and “Open now”.</p>
+        <header class="card-h"><h2 class="h">Quick Links</h2></header>
+        <div class="card-b list">
+          <a class="link" href="guide.html">Guide</a>
+          <a class="link" href="specials.html">Specials</a>
+          <a class="link" href="map.html">Map</a>
+          <a class="link" href="schedule.html">Schedule</a>
+          <a class="link" href="submit.html">Submit a listing</a>
         </div>
       </article>
 
-      <article class="card">
-        <header class="card-h"><h2>TV & Streams (This Week)</h2></header>
-        <div class="card-b">
-          <p class="muted">Updates closer to kickoff.</p>
-        </div>
-      </article>
-
-      <article class="card">
-        <header class="card-h"><h2>Odds</h2></header>
-        <div class="card-b">
-          <p class="muted">For entertainment only. Check a licensed sportsbook for current numbers.</p>
-        </div>
-      </article>
-
-      <article class="card">
-        <header class="card-h"><h2>Rankings (AP Top 25)</h2></header>
-        <div class="card-b"><p class="muted">—</p></div>
-      </article>
     </aside>
   </main>
 
   <footer class="sitefoot">
-    <p class="muted">
-      <strong>Unofficial notice:</strong>
-      Independent, fan-operated site. Not affiliated with any university, athletics program, conference, or governing body.
-    </p>
-    <nav class="footnav">
-      <a href="guide.html">Guide</a> • <a href="specials.html">Specials</a> •
-      <a href="map.html">Map</a> • <a href="schedule.html">Schedule</a> •
+    <p><strong>Unofficial notice:</strong> Independent, fan-operated site. Not affiliated with any university, athletics program, conference, or governing body.</p>
+    <p class="sitelinks">
+      <a href="guide.html">Guide</a> ·
+      <a href="specials.html">Specials</a> ·
+      <a href="map.html">Map</a> ·
+      <a href="schedule.html">Schedule</a> ·
       <a href="submit.html">Submit</a>
-    </nav>
-    <p class="muted">© 2025 HC Web Labs. Content licensed under CC BY-NC-ND 4.0.</p>
+    </p>
+    <p class="license">© 2025 HC Web Labs. Content licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY-NC-ND 4.0</a>.</p>
   </footer>
 
-  <script src="assets/js/app.js" defer></script>
-  <script src="assets/js/live.js" defer></script>
+  <!-- App scripts -->
+  <script type="module" src="assets/js/app.js"></script>
+
+  <!-- Tiny, scoped enhancer: expand/collapse schedule (no globals) -->
+  <script>
+    (() => {
+      const btn = document.querySelector('[data-toggle="sched"]');
+      const table = document.querySelector('#sched');
+      const fade = document.querySelector('#schedCard .fade-mask');
+      if (!btn || !table) return;
+
+      const setState = (expanded) => {
+        table.dataset.expanded = expanded ? '1' : '0';
+        btn.textContent = expanded ? 'Show less' : 'Show full schedule';
+        if (fade) fade.style.opacity = expanded ? '0' : '1';
+      };
+
+      setState(false);
+      btn.addEventListener('click', () => {
+        setState(table.dataset.expanded !== '1');
+      });
+    })();
+  </script>
 </body>
 </html>
