--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
     </section>
   </header>
 
-  <!-- Grid -->
+  <!-- Layout grid -->
   <main id="main" class="page">
-    <!-- Content column -->
     <section class="content">
-
       <!-- 3-up stats -->
       <div class="stats3">
         <article class="card">
@@ -48,9 +46,7 @@
                 <div class="team-name" id="live-home-name">Tennessee</div>
                 <div class="team-score" id="live-home-score">—</div>
               </div>
-              <div class="game-state">
-                <div id="live-gameclock">No game in progress.</div>
-              </div>
+              <div class="game-state"><div id="live-gameclock">No game in progress.</div></div>
               <div class="team away">
                 <div class="team-name" id="live-away-name">—</div>
                 <div class="team-score" id="live-away-score">—</div>
@@ -90,8 +86,6 @@
 
       <!-- Magazine grid -->
       <div class="mag-grid">
-
-        <!-- Schedule -->
         <article class="card card-span2" id="schedCard">
           <header class="card-h">
             <h2 class="h">Schedule & Results</h2>
@@ -101,7 +95,7 @@
             <div class="table-wrap">
               <table class="table">
                 <thead>
-                <tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr>
+                  <tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr>
                 </thead>
                 <tbody id="sched"></tbody>
               </table>
@@ -143,7 +137,6 @@
           <header class="card-h"><h2 class="h">Rankings (AP Top 25)</h2></header>
           <div class="card-b" id="rankings">Loading…</div>
         </article>
-
       </div>
     </section>
 
